<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="5dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_budget_str"
                android:textAlignment="center"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/et_dialog_budget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/edit_text_budget_str"
                android:inputType="numberDecimal"
                android:textAlignment="center" />

            <Button
                android:id="@+id/budget_dialog_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/add_str"
                android:textColor="@android:color/background_light"
                android:textSize="16sp" />

            <Button
                android:id="@+id/budget_dialog_sub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/sub_budget_str"
                android:textColor="@android:color/background_light"
                android:textSize="16sp" />

            <Button
                android:id="@+id/budget_dialog_set"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/set_budget_str"
                android:textColor="@android:color/background_light"
                android:textSize="16sp" />

            <Button
                android:id="@+id/budget_dialog_reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/reset_budget_str"
                android:textColor="@android:color/background_light"
                android:textSize="16sp" />

            <Button
                android:id="@+id/budget_dialog_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/close_str"
                android:textColor="@android:color/background_light"
                android:textSize="16sp" />

        </LinearLayout>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>