<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="5dp">

            <TextView
                android:id="@+id/tv_arrears_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/input_name_str"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_arrears_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Имя"
                android:inputType="textPersonName"
                android:textAlignment="center" />

            <Button
                android:id="@+id/input_deptor_add_contacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/darker_gray"
                android:text="@string/add_from_contact_str"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_arrears_money"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/input_money_str"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_arrears_money"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textAlignment="center" />

            <RadioGroup
                android:id="@+id/input_deptor_rgroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/yours_depts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="false"
                    android:text="@string/your_dept_str"
                    android:textAlignment="textStart"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/depts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dept_str"
                    android:textAlignment="textStart"
                    android:textSize="18sp" />
            </RadioGroup>

            <Button
                android:id="@+id/input_deptor_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/add_str"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />

        </LinearLayout>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>